src/test/ui/nll/user-annotations/constant-in-expr-inherent-1.stderr
error[E0759]: `fn` parameter has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/constant-in-expr-inherent-1.rs:8:5
   |
LL | fn foo<'a>(_: &'a u32) -> &'static u32 {
   |               ------- this data with lifetime `'a`...
LL |     <Foo<'a>>::C
   |     ^^^^^^^^^^^^ ...is used and required to live as long as `'static` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
